--- a/pages/publications.html
+++ b/pages/publications.html
@@ -72,7 +72,7 @@
         <section class="publications publications--flex">
             <div class="publications__container container">
                 <div class="publications__switcher switcher">
-                    <div class="switcher__btn switcher__btn--1">
+<!--                     <div class="switcher__btn switcher__btn--1">
                         <input id="radio-1" type="radio" name="radio" value="1" checked class="switcher__radio-input">
                         <label for="radio-1" class="switcher__radio-label">news</label>
                     </div>
@@ -80,7 +80,12 @@
                     <div class="switcher__btn switcher__btn--2">
                         <input id="radio-2" type="radio" name="radio" value="2" class="switcher__radio-input">
                         <label for="radio-2" class="switcher__radio-label">articles</label>
-                    </div>
+                    </div> -->
+                    <input id="radio-1" type="radio" name="radio" value="1" checked class="switcher__radio-input switcher__radio-input-1">
+                    <label for="radio-1" class="switcher__radio-label">news</label>
+                    <input id="radio-2" type="radio" name="radio" value="2" class="switcher__radio-input switcher__radio-input-2">
+                    <label for="radio-2" class="switcher__radio-label">articles</label>
+                    <div class="switcher__white-block"></div>
                 </div>
                 <div class="publications__block">
                     <article class="publications__item publication">
