--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<a href="pages/services.html" class="advantages__link link">services</a>
 				<h2 class="advantages__title">What can we do better than others?</h2>
 				<div class="advantages__block">
-					<div class="advantage">
+					<div class="advantage hide-element-left script-animation">
 						<a class="advantage__link" href="pages/services-inner.html">
 							<div class="advantage__image-wrap">
 								<img src="img/svg/it-and-ecommerce.svg" alt="it-and-ecommerce"
@@ -111,7 +111,7 @@
 								to do to hire an in-house lawyer.</p>
 						</a>
 					</div>
-					<div class="advantage">
+					<div class="advantage hide-element-up script-animation">
 						<a class="advantage__link" href="pages/services-inner.html">
 							<div class="advantage__image-wrap">
 								<img src="img/svg/support.svg" alt="it-and-ecommerce" class="advantage__image-svg">
@@ -124,7 +124,7 @@
 								good candidate with experience in the field of information technology in Ukraine.</p>
 						</a>
 					</div>
-					<div class="advantage">
+					<div class="advantage hide-element-right script-animation">
 						<a class="advantage__link" href="pages/services-inner.html">
 							<div class="advantage__image-wrap">
 								<img src="img/svg/coprorate-relationships.svg" alt="it-and-ecommerce"
@@ -136,7 +136,7 @@
 								whole team that will fit into the daily life of your company.</p>
 						</a>
 					</div>
-					<div class="advantage">
+					<div class="advantage hide-element-left script-animation">
 						<a class="advantage__link" href="pages/services-inner.html">
 							<div class="advantage__image-wrap">
 								<img src="img/svg/building-relations.svg" alt="it-and-ecommerce"
@@ -149,7 +149,7 @@
 								affairs instead of waiting for update status.</p>
 						</a>
 					</div>
-					<div class="advantage">
+					<div class="advantage hide-element-down script-animation">
 						<a class="advantage__link" href="pages/services-inner.html">
 							<div class="advantage__image-wrap">
 								<img src="img/svg/protection.svg" alt="it-and-ecommerce" class="advantage__image-svg">
@@ -162,7 +162,7 @@
 								will work for you instead of a corporate lawyer.</p>
 						</a>
 					</div>
-					<div class="advantage">
+					<div class="advantage hide-element-right script-animation">
 						<a class="advantage__link" href="pages/services-inner.html">
 							<div class="advantage__image-wrap">
 								<img src="img/svg/judicial.svg" alt="it-and-ecommerce" class="advantage__image-svg">
@@ -337,6 +337,7 @@
 	</footer>
 	<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
 	<script src="js/script-swiper.js"></script>
+	<script src="js/script-observer.js"></script>
 </body>
 
 </html>
