--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -86,9 +86,9 @@
                 </div>
                 <div class="contacts-and-form__form-block">
                     <form action="https://fom.in.ua/echo" class="form">
-                        <h2 class="form__title"></h2>
+                        <h2 class="form__title">We would like to help you</h2>
                         <input type="text" name="name" class="form__name" required placeholder="Name">
-                        <textarea name="message" id="message" cols="30" rows="10" class="form__message"
+                        <textarea name="message" id="message" class="form__message"
                             placeholder="Message" required></textarea>
                         <h4 class="form__answer">How to answer you?</h4>
                         <input type="text" name="phone" id="" class="form__phone" placeholder="Phone number" required>
