--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 							</a>
 						</div>
 					</section>
+					<section class="main-header__logo main-header__logo-inner">
+						<a href="index.html" class="main-header__logo-link">
+							<svg class="main-header__logo-svg">
+								<use xlink:href="img/svg/sprite.svg#logo"></use>
+							</svg>
+						</a>
+					</section>
 					<section class="main-header__menu main-navigation">
 						<nav class="main-navigation__nav">
 							<ul class="main-navigation__list">
