--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -216,6 +216,35 @@
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
+                <div class="swiper swiper--about-us-2">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <div class="achievements__item"><img src="../img/png/legal-500.png" alt="legal-500"
+                            class="achievement__img"></div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="achievements__item"><img src="../img/png/legal-awards.png" alt="Lega Awards"
+                            class="achievement__img"></div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="achievements__item"><img src="../img/png/rate.png" alt="Rating 2017"
+                            class="achievement__img"></div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="achievements__item"><img src="../img/png/law-firms.png" alt="Law Firms"
+                            class="achievement__img"></div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="achievements__item"><img src="../img/png/legal-500.png" alt="legal-500"
+                            class="achievement__img"></div>
+                      </div>
+                      <div class="swiper-slide">
+                        <div class="achievements__item"><img src="../img/png/legal-awards.png" alt="Lega Awards"
+                            class="achievement__img"></div>
+                      </div>
+                    </div>
+                    <div class="swiper-pagination"></div>
+                </div>
             </div>
         </section>
     </main>
