--- a/pages/team-inner.html
+++ b/pages/team-inner.html
@@ -42,6 +42,17 @@
                         </a>
                     </div>
                 </section>
+                <section class="main-header__logo main-header__logo-inner">
+                    <a href="../index.html" class="main-header__logo-link">
+                        <svg class="main-header__logo-svg">
+                            <use xlink:href="../img/svg/sprite.svg#logo"></use>
+                        </svg>
+                    </a>
+                    <svg class="main-header__logo-svg-slash">
+                        <use xlink:href="../img/svg/sprite.svg#slash"></use>
+                    </svg>
+                    <span class="main-header__logo-route">team</span>
+                </section>
                 <section class="main-header__menu main-navigation">
                     <nav class="main-navigation__nav">
                         <ul class="main-navigation__list">
@@ -63,6 +74,34 @@
                         </ul>
                     </nav>
                 </section>
+                <section class="sandwich">
+                    <input type="checkbox" class="sandwich__checkbox" id="sandwich__checkbox">
+                    <nav class="sandwich__nav">
+                        <ul class="sandwich__list">
+                            <li class="sandwich__item">
+                                <a href="pages/about-us.html" class="sandwich__link">about us</a>
+                            </li>
+                            <li class="sandwich__item">
+                                <a href="pages/services.html" class="sandwich__link">services</a>
+                            </li>
+                            <li class="sandwich__item">
+                                <a href="pages/team.html" class="sandwich__link">team</a>
+                            </li>
+                            <li class="sandwich__item">
+                                <a href="pages/publications.html" class="sandwich__link">publications</a>
+                            </li>
+                            <li class="sandwich__item">
+                                <a href="pages/contacts.html" class="sandwich__link">contact</a>
+                            </li>
+                            <label class="sandwich__close" for="sandwich__checkbox">
+                                <svg class="sandwich__close-svg">
+                                    <use xlink:href="../img/svg/sprite.svg#close"></use>
+                                </svg>
+                            </label>
+                        </ul>
+                    </nav>
+                    <label class="sandwich__button sandwich-show" for="sandwich__checkbox"></label>
+                </section>
             </div>
         </div>
     </header>
@@ -78,6 +117,28 @@
                         <a href="#" class="person__email">kobzar@forstudy.space</a>
                         <a href="https://ru.linkedin.com/" class="person__linkedin">LinkedIn profile</a>
                     </div>
+                    <p class="person__text">Oksana heads the practice of international trade and shipping. He specializes in resolving disputes related to the purchase and sale of raw materials and transportation of goods by sea.</p>
+                    <p class="person__text">Desis represents the interests of shipowners, freight forwarders, cargo owners, shipping agents, container lines, as well as international banks and P&I clubs.</p>
+                    <h4 class="person__title-small">Education</h4>
+                    <p class="person__text">National University "Odessa Law Academy", Master of Law.</p>
+                    <h4 class="person__title-small">Experience</h4>
+                    <p class="person__text">Her professional experience includes resolving disputes under English law and representing interests in foreign commercial arbitrations such as GAFTA, FOSFA and LMAA. Danilo also represents the interests of clients in the state courts of Ukraine on similar disputes, as well as in the ICAC and IAC at the CCI of Ukraine</p>
+                </div>
+            </div>
+        </section>    
+        <section class="person-for-small">
+            <div class="person__container person-for-small__container container">
+                <div class="person__photo-and-contacts">
+                    <div class="person__photo"><img src="../img/png/team/kobzar-big.png" alt="Oksana Kobzar" class="person__img">
+                    </div>
+                    <div class="person__contacts">
+                        <h1 class="person__title">Oksana Kobzar</h1>
+                        <span class="person__position">Equity partner, Attorney-at-law</span>
+                        <a href="#" class="person__email">kobzar@forstudy.space</a>
+                        <a href="https://ru.linkedin.com/" class="person__linkedin">LinkedIn profile</a>
+                    </div>
+                </div>
+                <div class="person__description">
                     <p class="person__text">Oksana heads the practice of international trade and shipping. He specializes in resolving disputes related to the purchase and sale of raw materials and transportation of goods by sea.</p>
                     <p class="person__text">Desis represents the interests of shipowners, freight forwarders, cargo owners, shipping agents, container lines, as well as international banks and P&I clubs.</p>
                     <h4 class="person__title-small">Education</h4>
