--- a/pages/publications.html
+++ b/pages/publications.html
@@ -127,7 +127,7 @@
                     <div class="switcher__white-block"></div>
                 </div>
                 <div class="publications__block">
-                    <article class="publications__item publication">
+                    <article class="publications__item publication publications__item--small-screen">
                         <a class="publication__link" href="../pages/publications-inner.html">
                             <div class="publication__img-wrap">
                                 <img src="../img/png/planning.png" alt="Planning" class="publication__img">
@@ -140,7 +140,7 @@
                             </div>
                         </a>
                     </article>
-                    <article class="publications__item publication">
+                    <article class="publications__item publication publications__item--small-screen">
                         <a class="publication__link" href="../pages/publications-inner.html">
                             <div class="publication__img-wrap">
                                 <img src="../img/png/gdpr.png" alt="GDPR" class="publication__img">
@@ -155,7 +155,7 @@
                             </div>
                         </a>
                     </article>
-                    <article class="publications__item publication">
+                    <article class="publications__item publication publications__item--small-screen">
                         <a class="publication__link" href="../pages/publications-inner.html">
                             <div class="publication__img-wrap">
                                 <img src="../img/png/people.png" alt="People" class="publication__img">
@@ -169,7 +169,7 @@
                             </div>
                         </a>
                     </article>
-                    <article class="publications__item publication">
+                    <article class="publications__item publication publications__item--small-screen">
                         <a class="publication__link" href="../pages/publications-inner.html">
                             <div class="publication__img-wrap">
                                 <img src="../img/png/languages.png" alt="languages" class="publication__img">
@@ -183,7 +183,7 @@
                             </div>
                         </a>
                     </article>
-                    <article class="publications__item publication">
+                    <article class="publications__item publication publications__item--small-screen">
                         <a class="publication__link" href="../pages/publications-inner.html">
                             <div class="publication__img-wrap">
                                 <img src="../img/png/kindergarten.png" alt="kindergarten" class="publication__img">
@@ -198,7 +198,7 @@
                             </div>
                         </a>
                     </article>
-                    <article class="publications__item publication">
+                    <article class="publications__item publication publications__item--small-screen">
                         <a class="publication__link" href="../pages/publications-inner.html">
                             <div class="publication__img-wrap">
                                 <img src="" alt="" class="publication__img">
