--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -81,7 +81,7 @@
                     <nav class="sandwich__nav">
                         <ul class="sandwich__list">
                             <li class="sandwich__item">
-                                <a href="pages/about-us.html" class="sandwich__link">about us</a>
+                                <a href="about-us.html" class="sandwich__link">about us</a>
                             </li>
                             <li class="sandwich__item">
                                 <a href="pages/services.html" class="sandwich__link">services</a>
