--- a/pages/services-inner.html
+++ b/pages/services-inner.html
@@ -83,19 +83,19 @@
                         <nav class="sandwich__nav">
                             <ul class="sandwich__list">
                                 <li class="sandwich__item">
-                                    <a href="pages/about-us.html" class="sandwich__link">about us</a>
+                                    <a href="about-us.html" class="sandwich__link">about us</a>
                                 </li>
                                 <li class="sandwich__item">
-                                    <a href="pages/services.html" class="sandwich__link">services</a>
+                                    <a href="services.html" class="sandwich__link">services</a>
                                 </li>
                                 <li class="sandwich__item">
-                                    <a href="pages/team.html" class="sandwich__link">team</a>
+                                    <a href="team.html" class="sandwich__link">team</a>
                                 </li>
                                 <li class="sandwich__item">
-                                    <a href="pages/publications.html" class="sandwich__link">publications</a>
+                                    <a href="publications.html" class="sandwich__link">publications</a>
                                 </li>
                                 <li class="sandwich__item">
-                                    <a href="pages/contacts.html" class="sandwich__link">contact</a>
+                                    <a href="contacts.html" class="sandwich__link">contact</a>
                                 </li>
                                 <label class="sandwich__close" for="sandwich__checkbox">
                                     <svg class="sandwich__close-svg">
